<resources>
    <string name="app_name">Find Me UV</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email*</string>
    <string name="personal_information">Personal</string>
    <string name="first_name">First Name*</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last Name*</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="gender">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="contact_number">Contact Number*</string>
    <string name="enter_contact_number">Enter contact number</string>
    <string name="account_information">Account</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="registrationForm">RegistrationForm</string>
    <string name="trip_schedule">Trip Schedules</string>
    <string name="traveling_uv_s">Traveling UV\'s</string>
</resources>
